--- a/style.css
+++ b/style.css
@@ -128,6 +128,11 @@ a.button.secondary {
   flex-direction: column;
 }
 
+.pricing .tier.disabled {
+  opacity: 0.4;
+  pointer-events: none;
+}
+
 .pricing .tier.black {
   border-top: 10px solid #555;
 }
